# ramblingrealms-trading

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  FAST_TRAINING_GUIDE.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pylint.yml
data/: sample_appl.csv
data/positions/: local_paper_trading_positions.json
docs/: requirements.txt
docs/source/: conf.py  config.rst  configuration.rst  getting_started.rst  index.rst  overview.rst  profiling.rst  usage.rst
trading/: __init__.py
trading/cli/: main.py  rr_trading.py  utils.py
trading/cli/alg/: alg.py  config.py
trading/cli/configuration/: sample.yml
trading/cli/data/: data.py
trading/cli/data/apis/: polygon_io.py
trading/cli/data/configs/: sample_appl.json  sample_market_snapshot.json
trading/cli/etrade/: config.py  etrade.py
trading/cli/trading/: trade_config.py
trading/commands/etrade/: config.py  etrade.py
trading/configs/: agent_config.json  data_config.json  ddpg_config.json  fast_training_agent_config.json  fast_training_ppo.json  fast_training_stock_env.json  feature_config.json  generic_alg.json  multi_ticker_data_config.json  multi_ticker_ppo.json  ppo_config.json  run_params.json  sample_ppo.json  single_ticker_ppo.json  stock_env.json
trading/configs/agents/: ddpg_config.json  fast_training_agent_config.json  ppo_config.json
trading/configs/data/: SPY_5.json  data_config.json  multi_ticker_data_config.json
trading/configs/envs/: fast_training_stock_env.json  stock_env.json
trading/configs/features/: feature_config.json  just_candle.json
trading/configs/trading/: alpaca_paper_trading.json  local_paper_trading.json  remote_paper_trading.json  remote_paper_trading_test.json
trading/notebooks/: alpaca.ipynb  sandbox.ipynb  training.ipynb
trading/src/: alpaca.ipynb  sandbox.ipynb  user_cache.py
trading/src/alg/agents/: agents.py  lr_schedule.py
trading/src/alg/backtest/: backtesting.py  strategy.py
trading/src/alg/callbacks/: __init__.py  training_telemetry.py
trading/src/alg/data_process/: data_loader.py
trading/src/alg/environments/: README.md  base_environment.py  fast_training_env.py  stateful_trading_env.py  trading_environment.py
trading/src/alg/environments/reward_functions/: base_reward_function.py  basic_profit_max.py  fast_profit_reward.py  reward_function_factory.py  utils.py
trading/src/alg/loss/: profit_loss.py
trading/src/alg/models/: hf_time_series.py
trading/src/alg/portfolio/: portfolio.py  position.py  vectorized_position.py
trading/src/alg/portfolios/: position.py
trading/src/alg/trainers/: train.py
trading/src/features/: generic_features.py  piotroski.py  utils.py
trading/src/portfolio/: portfolio.py  position.py
trading/src/trade/: trade_api.py  trade_base.py  trade_clients.py
trading/src/user_cache/: etrade_secrets.py  user_cache.py
trading/src/utility/: utils.py
trading/test/: conftest.py
trading/test/alg/: conftest.py  test_fixtures.py
trading/test/alg/agents/: test_agents.py  test_lr_schedule.py
trading/test/alg/backtest/: test_backtest.py
trading/test/alg/data_process/: test_data_loader.py
trading/test/alg/environments/: benchmark_performance.py  test_reward_function.py  test_trading_environment.py
trading/test/alg/portfolio/: test_portfolio.py  test_positions.py
trading/test/alg/utility/: test_utils.py
trading/test/benchmark/: test_benchmark-train-env.py
trading/test/cli/: test_alg.py  test_cli.py
trading/test/configs/: agent_config.json  data_config.json  feature_config.json  generic_alg.json  stock_env.json  trade_config.json  train_config.json  user_cache.json
trading/test/data/: LIVE.parquet  TEST_APPLE.parquet  TEST_INCOMPLETE_MULTI_TICKERS.parquet  TEST_MULTI_TICKERS.parquet  TEST_SET.parquet  TEST_TIME_STEP.parquet
trading/test/data/accounts/: local_paper_trading_account.json
trading/test/data/positions/: local_paper_trading_positions.json
trading/test/features/: test_features.py
trading/test/mocks/: alpaca_trading_client_mock.py  stock_historical_data_client_mock.py
trading/test/portfolio/: test_live_position_manager_integration.py  test_portfolio_integration.py
trading/test/trade/: test_trade_clients_integration.py
