[project]
name = "ramblingrealms-trading"
dynamic = ["version"]
description = "Rambling Realms Trading Platform"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    {name = "Matthew Jacobsen",email = "matthewjacobsen1999@gmail.com"}
]
maintainers = [
    {name = "Matthew Jacobsen",email = "matthewjacobsen1999@gmail.com"}
]
keywords = [
    "trading",
    "finance",
    "investing",
    "stocks",
    "cryptocurrency",
    "portfolio management"
]
classifiers = []
dependencies = [
    "numpy>=2.2.5,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pyetrade>=2.1.1,<3.0.0",
    "huggingface-hub>=0.31.1,<0.32.0",
    "typer (>=0.7,<0.10)",
    "rich>=14.0.0,<15.0.0",
    "appdirs (>=1.4.4,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "click (>=8.1,<8.2)",
    "polygon-api-client (>=1.14.5,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"

]
[project.urls]
repository = "https://github.com/mjacobsen32/ramblingrealms-trading"

[project.scripts]
rr_trading = "trading.cli.main:app"

[tool.poetry.scripts]
rr_trading = "trading.cli.main:app"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
packages = [
    { include = "trading" }
]

[tool.black]
line-length = 88
target-version = ["py312"]