[project]
name = "ramblingrealms-trading"
dynamic = ["version"]
description = "Rambling Realms Trading Platform"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "Matthew Jacobsen", email = "mjacobsen.pro@gmail.com" }]
maintainers = [{ name = "Matthew Jacobsen", email = "mjacobsen.pro@gmail.com" }]
keywords = [
  "trading",
  "finance",
  "investing",
  "stocks",
  "cryptocurrency",
  "portfolio management",
]
classifiers = []
dependencies = [
  "numpy>=2.2.5,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "huggingface-hub>=0.31.1,<0.32.0",
  "typer (>=0.7,<0.10)",
  "rich>=14.0.0,<15.0.0",
  "appdirs (>=1.4.4,<2.0.0)",
  "tomli (>=2.2.1,<3.0.0)",
  "tomli-w (>=1.2.0,<2.0.0)",
  "click (>=8.1,<8.2)",
  "polygon-api-client (>=1.14.5,<2.0.0)",
  "pydantic (>=2.11.4,<3.0.0)",
  "fastparquet (>=2024.11.0,<2025.0.0)",
  "alpaca-py (>=0.37,<0.41.0)",
  "torch (>=2.7.0,<3.0.0)",
  "scikit-learn (>=1.6.1,<2.0.0)",
  "matplotlib (>=3.10.3,<4.0.0)",
  "vectorbt (>=0.28.0)",
  "pandas-market-calendars (>=5.1.0,<6.0.0)",
  "gymnasium (>=1.2.0,<2.0.0)",
  "stable-baselines3 (>=2.6.0,<3.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "nbformat (>=5.10.4,<6.0.0)",
  "kaleido (<=0.2.1)",
  "anywidget (>=0.9.18,<0.10.0)",
  "quantstats (>=0.0.70,<0.0.71)",
  "boto3 (>=1.42.5,<2.0.0)",
  "pyarrow (>=22.0.0,<23.0.0)",
  "numba (==0.61.2)",
]

[project.urls]
repository = "https://github.com/mjacobsen32/ramblingrealms-trading"

[project.scripts]
rr_trading = "trading.cli.rr_trading:app"
benchmark-performance = "trading.test.alg.environments.benchmark_performance:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.29.5"
isort = "^6.0.1"
ruff = "^0.11.13"
mypy = "^1.16.0"
pytest = "^8.4.0"
coverage = "^7.8.2"
pre-commit = "^4.2.0"
tensorboard = "^2.19.0"
pytest-cov = "^6.2.1"
genbadge = "^1.1.2"
defusedxml = "^0.7.1"
py-spy = "^0.4.1"
types-requests = "^2.32.4.20250809"
moto = "^5.1.18"
pytest-benchmark = "^5.2.3"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"
myst-parser = "^4.0.1"
sphinx-rtd-theme = "^3.0.2"
autodoc-pydantic = "^2.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-autodoc-typehints = "^3.2.0"
sphinxcontrib-programoutput = "^0.18"
sphinx-click = "^6.0.0"
sphinxcontrib-typer = "^0.5.1"
sphinx-jsonschema = "^1.19.1"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
cudf-cu12 = ">=25.8.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "1.1.2"
packages = [{ include = "trading" }]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.coverage.run]
branch = true
omit = [
  "**/tests/**",
  "**/test/**",
  "**/user_cache/**",
  "**/polygon_io.py",

  # The CLI entrypoint's inject remote dependencies (hard to test), and not quite critical for unittesting
  "trading/cli/rr_trading.py",
]
source = ["trading"]

[tool.coverage.report]
show_missing = true
fail_under = 90
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  "raise ValueError",

  # Don't complain about logging calls:
  "logging\\.debug\\(",
  "logging\\.warning\\(",
  "logging\\.error\\(",
  "logging\\.info\\(",

  # Don't complain about empty functions (e.g. interfaces):
  "pass",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
